[tool.poetry]
name = "auto-video-compression"
version = "1.0"
description = ""
authors = ["Fred Israel <fredpublico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
humanize = "^4.4.0"
loguru = "^0.6.0"
dictdiffer = "^0.9.0"
json-stream = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
